style.css
body {
	margin: 0;
}
* {
	box-sizing: border-box;
}
a {
	text-decoration: none;
}
li {
	list-style-type: none;
}
section {
	width: 100%;
	height: 100vh;
	padding: 0 5%;
	display: table;
	margin: 0;
	max-width: none;
	font-family: 'Lato', sans-serif;
}
.intro {
	background-color: #000000;
	color: #FFFFFF;
	text-align: center;
	height: 100vh;
}
#name {
	font-family: 'Space Mono', sans-serif;
	font-size: 8vw;
}
#username {
	font-family: 'Roboto Mono', monospace;
	font-size: 4vw;
}
#arrow {
	position: absolute;
	bottom: 20px;
	left: 50%;
	margin-left: -20px;
	width: 40px;
	height: 40px;
	background-image: url("images/down_arrow.svg");
	background-size: contain;
}
#linkslist {
	width: 100%;
	padding: 0;
	display: flex;
	justify-content: space-between;
	flex-flow: wrap;
}
#linkslist li {
	padding: 0 5px;
}
#linkslist img {
	height: 60px;
	padding-bottom: 5px;
}

